--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.0",
     "angular-star-rating": "^4.0.0-beta.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.9",
     "css-star-rating": "^1.2.4",
     "hammerjs": "^2.0.8",
+    "ngx-bar-rating": "^1.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
