--- a/package.json
+++ b/package.json
@@ -12,22 +12,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.1",
+    "@angular/cdk": "8.0.1",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
     "@angular/forms": "~8.0.1",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0-rc.0",
     "@types/mocha": "^5.2.7",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "angular-star-rating": "^4.0.0-beta.3",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.1.4",
+    "css-star-rating": "^1.2.4",
+    "hammerjs": "^2.0.8",
+    "i": "^0.3.6",
+    "ngx-bar-rating": "^1.1.0",
+    "nodesass": "0.0.2-security",
+    "rxjs": "6.5.2",
+    "tslib": "^1.10.0",
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
     "@angular-builders/jest": "^8.0.3",
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.3",
+    "@angular-devkit/build-angular": "^0.800.4",
+    "@angular/cli": "^8.0.4",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
     "@types/jasmine": "^3.3.13",
