--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0-rc.0",
+    "@ngmodule/material-carousel": "^0.4.0",
+    "@types/chart.js": "^2.7.54",
     "@types/mocha": "^5.2.7",
+    "angular-bootstrap-md": "^7.5.4",
     "angular-star-rating": "^4.0.0-beta.3",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "core-js": "^3.1.4",
     "css-star-rating": "^1.2.4",
     "hammerjs": "^2.0.8",
