list des participants
liste fini + données

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-bar-rating": "^1.1.0",
     "nodesass": "0.0.2-security",
     "rxjs": "6.5.2",
+    "slick-carousel": "^1.8.1",
     "tslib": "^1.10.0",
     "zone.js": "0.9.1"
   },
