--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-star-rating": "^1.2.4",
     "hammerjs": "^2.0.8",
     "i": "^0.3.6",
+    "ng5-slider": "^1.2.4",
     "ngx-bar-rating": "^1.1.0",
     "nodesass": "0.0.2-security",
     "rxjs": "6.5.2",
