--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~8.0.1",
     "@angular/forms": "~8.0.1",
     "@angular/material": "^8.1.2",
+    "@angular/material-moment-adapter": "^8.2.2",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
@@ -34,6 +35,7 @@
     "css-star-rating": "^1.2.4",
     "hammerjs": "^2.0.8",
     "i": "^0.3.6",
+    "moment": "^2.24.0",
     "ng5-slider": "^1.2.4",
     "ngx-bar-rating": "^1.1.0",
     "nodesass": "0.0.2-security",
