--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chart.js": "^2.5.0",
     "core-js": "^3.1.4",
     "css-star-rating": "^1.2.4",
+    "firebase": "^7.1.0",
     "hammerjs": "^2.0.8",
     "i": "^0.3.6",
     "moment": "^2.24.0",
