--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.0.1",
     "@angular/material": "^8.1.2",
     "@angular/material-moment-adapter": "^8.2.2",
@@ -33,7 +34,7 @@
     "chart.js": "^2.5.0",
     "core-js": "^3.1.4",
     "css-star-rating": "^1.2.4",
-    "firebase": "7.1.0",
+    "firebase": "^7.1.0",
     "hammerjs": "^2.0.8",
     "i": "^0.3.6",
     "moment": "^2.24.0",
