--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@angular/core": "~8.0.1",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.0.1",
-    "@angular/material": "^8.1.2",
-    "@angular/material-moment-adapter": "^8.2.2",
+    "@angular/material": "8.1.2",
+    "@angular/material-moment-adapter": "8.1.2",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
